# tussler

./: .gitignore  Makefile  docker-compose.env  docker-compose.yml  garak.Dockerfile  note.scrape  ollama.Dockerfile  pyproject.toml  test.http  tussler.Dockerfile
.devcontainer/: .env  devcontainer.Dockerfile  devcontainer.env  devcontainer.json
tussler/: config.yaml  launcher.py  probe_setup.py  sample.env
tussler/config/: ollama_generator.json  ollama_host.yml  sample_garak.json  sample_garak.yml  test.json
