[project]
name = "tussler"
version = "0.1.0"
description = "An AI read teaming solution based on other open source projects"
authors = [
    { name="Gideon Aina", email="gideonaina@live.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.14",
    "garak>=0.9.0.11.post1",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
]


[tool.setuptools]
packages = ["tussler"] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
